# Memo-Rise

./: .gitignore  CONTRIBUTING.md  README.md  commitlint.config.cjs
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/: shared-infrastructure.md
aidlc-docs/construction/plans/: u0-foundation-code-generation-plan.md  u0-foundation-functional-design-plan.md  u0-foundation-infrastructure-design-plan.md  u0-foundation-nfr-design-plan.md  u0-foundation-nfr-requirements-plan.md  u1-accounts-auth-code-generation-plan.md  u1-accounts-auth-functional-design-plan.md  u1-accounts-auth-nfr-design-plan.md  (+2 more)
inputs/: tech-environment.md  vision.md
inputs/examples/: 0001_create_decks.sql  DeckList.tsx  deck_slice.py
memorise-back/: .env.example  Dockerfile  pyproject.toml
memorise-back/app/: main.py
memorise-back/app/api/v1/: deps.py
memorise-back/app/api/v1/routes/: health.py
memorise-back/app/core/: config.py  errors.py  logging.py  security.py
memorise-back/app/db/: rpc.py  session.py
memorise-back/tests/: conftest.py  test_config.py  test_config_pbt.py  test_health.py  test_security_headers.py
memorise-supabase/: README.md  config.toml
memorise-supabase/migrations/: 0001_init_profiles.sql  0002_profiles_signup_trigger.sql
memorise-supabase/supabase/: config.toml
memorise-web/: .env.example  eslint.config.mjs  middleware.ts  package-lock.json  package.json  vitest.config.ts
memorise-web/app/: layout.tsx  page.test.tsx  page.tsx
memorise-web/e2e/: auth.spec.ts
(+62 files in other folders)
